# canonical-angularcli-app

./: .bazelrc  BUILD.bazel  README.md  WORKSPACE  angular.json  package.json
e2e/: BUILD.bazel  tsconfig.e2e.json
e2e/src/: app.e2e-spec.ts
src/: BUILD.bazel  index.html
src/app/: app.component.spec.ts  app.component.ts
