load("@build_bazel_rules_typescript//:defs.bzl", "ts_library")
load("@angular//:index.bzl", "protractor_web_test_suite")

ts_library(
    name = "e2e_lib",
    testonly = 1,
    srcs = glob(["src/**/*.ts"]),
    tsconfig = ":tsconfig.e2e.json",
)

protractor_web_test_suite(
    name = "devserver_test",
    data = ["@angular//packages/bazel/src/protractor/utils"],
    on_prepare = ":protractor.on-prepare.js",
    server = "//src:devserver",
    deps = [":e2e_lib"],
    # Broken until https://github.com/angular/angular/pull/25701 is released
    tags = ["manual"],
)

alias(
    name = "e2e",
    actual = "devserver_test",
)
